frame/support/test/tests/construct_runtime_ui/system_at_index_non_zero_deprecated.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub enum Runtime where
		Block = Block,
		NodeBlock = Block,
		UncheckedExtrinsic = UncheckedExtrinsic
	{
		Balance: balances::{Config, Call, Origin<T>},
		System: system::{Module},
	}
}

fn main() {}
